# Optima_Yuli

./: .dockerignore  Dockerfile  pyproject.toml  setup.py
Optima/: Address_book.py  Bot.py  Commands.py  Notes.py  Singleton.py  __init__.py  main.py
